nginx/base/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx
  annotations: {}
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
